--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,12 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "jsonwebtoken": "^9.0.2"
+    "redis": "^5.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -31,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
+    "@types/redis": "^4.0.10",
     "eslint": "^9.39.1",
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
