--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "redis": "^5.9.0"
+    "redis": "^5.9.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
