feat: add displayName and avatarUrl fields to User interface and update Redis configuration in .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,7 +8,13 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/leaderboard?schema=p
 
 # Redis Configuration
 # Format: redis://HOST:PORT or redis://USER:PASSWORD@HOST:PORT
-REDIS_URL="redis://localhost:6379"
+# REDIS_URL="redis://localhost:6379"
+
+
+# For redis server
+REDIS_HOST =
+REDIS_PASSWORD = 
+REDIS_PORT =
 
 # JWT Secrets
 # Generate secure secrets with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
