--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1"
   },
